--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,9 +3,9 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#333135</color>
+    <color name="colorPrimaryDark">#1E1E1F</color>
+    <color name="colorAccent">#171B1B</color>
 
     <color name="colorBackgroundDarkMode">#22211F</color>
 </resources>
