--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="orange">#FFFF5722</color>
 
     <color name="colorPrimary">#333135</color>
     <color name="colorPrimaryDark">#1E1E1F</color>
