--- a/app/src/main/res/layout/activity_movie.xml
+++ b/app/src/main/res/layout/activity_movie.xml
@@ -16,8 +16,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:title="TV Guide"
-            tools:title="teste" />
+            app:title="TV Guide" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/movieRecyclerView"
